--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="menu_btn_mapa">MAPA</string>
     <string name="menu_btn_info">INFO</string>
     <string name="menu_btn_twitter">TWITTER</string>
+    <string name="title_activity_recycler_view_news">RecyclerViewNewsActivity</string>
+    <string name="title_activity_recycler_news">RecyclerNewsActivity</string>
+    <string name="action_settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
