--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -300,9 +300,12 @@ y Museo Eduardo Torroja</string>
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="titpiezacicloagua">Pieza del ciclo del agua en Plaza de Castilla</string>
-    <string name="d1"></string>
+    <string name="d1">El Depósito de la Plaza de Castilla (denominado también segundo depósito elevado) es una instalación perteneciente al Canal de Isabel II (Madrid). Se encuentra ubicado desde 1952 al final del paseo de la Castellana en un anexo a la plaza de Castilla. Se encuentra ubicado en el terreno municipal del que fue el cuarto depósito de laPlaza de Castilla (construido en el año 1939), y con una capacidad de 180.000 m3. El segundo depósito elevado se construye en el año 1939 con una capacidad de 3.800 m3 y una altura sobre la cota del terreno de unos 40 m."\n""\n"
+    Puede realizar una actividad el día 27 de mayo a las 10:00 - Itinerario con “Andariegos Madrid” por la muestra de
+iconos.
+</string>
     <string name="d2"></string>
-    <string name="d3"></string>
+    <string name="d3">La principal función de un compactador de residuos es reducir el volumen de los residuos mediante presión, proporcionando mayor densidad a los residuos (reducción de hasta 5 a 1). Esto se traduce en que un compactador puede cargar mucha más cantidad de residuo que un contenedor, ahorrando costes operativos y logísticos.</string>
     <string name="d4"></string>
     <string name="d5"></string>
     <string name="d6"></string>
